RESOLVED FIXED145259
MSVC internal compiler error when compiling TemplateRegistryKey class.
https://bugs.webkit.org/show_bug.cgi?id=145259
Summary MSVC internal compiler error when compiling TemplateRegistryKey class.
peavo
Reported 2015-05-21 04:23:52 PDT
I get an internal compiler error when compiling TemplateRegistryKey.h with MSVC (Visual Studio Express).
Attachments
Patch (1.20 KB, patch)
2015-05-21 04:33 PDT, peavo
no flags
peavo
Comment 1 2015-05-21 04:33:43 PDT
Alex Christensen
Comment 2 2015-05-21 09:38:20 PDT
Comment on attachment 253520 [details] Patch Strange. This should call Vector(std::initializer_list<String>), but I don't think it's a big deal to remove the explicit initialization to an empty Vector when that is the default behavior anyway.
peavo
Comment 3 2015-05-21 09:49:05 PDT
(In reply to comment #2) > Comment on attachment 253520 [details] > Patch > > Strange. This should call Vector(std::initializer_list<String>), but I > don't think it's a big deal to remove the explicit initialization to an > empty Vector when that is the default behavior anyway. Yes, I'm also a bit surprised that the WinCairo bot doesn't seem to have a problem, maybe we have slightly different versions of MSVC. Thanks for reviewing :)
WebKit Commit Bot
Comment 4 2015-05-21 10:27:57 PDT
Comment on attachment 253520 [details] Patch Clearing flags on attachment: 253520 Committed r184717: <http://trac.webkit.org/changeset/184717>
WebKit Commit Bot
Comment 5 2015-05-21 10:28:00 PDT
All reviewed patches have been landed. Closing bug.
Brent Fulgham
Comment 6 2015-05-22 09:03:21 PDT
You should make sure you are running "Update 4" of Visual Studio. It fixes a number of compiler bugs. It does not show up automatically when you do a "check for updates", you have to go to the MSDN site and locate the download link. :-(
peavo
Comment 7 2015-05-22 10:58:09 PDT
(In reply to comment #6) > You should make sure you are running "Update 4" of Visual Studio. It fixes a > number of compiler bugs. It does not show up automatically when you do a > "check for updates", you have to go to the MSDN site and locate the download > link. :-( Ah, ok, thanks :)
Note You need to log in before you can comment on or make changes to this bug.