MSVC internal compiler error when compiling TemplateRegistryKey class. https://bugs.webkit.org/show_bug.cgi?id=145259

Reviewed by Alex Christensen.

MSVC is not able to handle the brace initialization of a class member in this case.

* runtime/TemplateRegistryKey.h:


Canonical link: https://commits.webkit.org/163279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184717 268f45cc-cd09-0410-ab3c-d52691b4dbfc